<resources>
    <string name="app_name">DP Map</string>

    <string-array name="class_halls"><!--Halls for the spinner-->
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="reminder">Room Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="optiontitle1"> Highlight or Pin?</string>
    <string name="optiontitle2">Display Style</string>
    <string name="optiontitle3">Attributions</string>
    <string name="optionselect1">highlight</string>
    <string name="optionselect2">pin</string>
    <string name="optionselect3">All at once</string>
    <string name="optionselect4">One at a time</string>
    <string name="optionAttrib">Icons designed by Smashicons from Flaticon</string>

    <string name="rmvstrin">Remove</string>
    <string name="which_room">which room do you want to remove?</string>
    <string name="removed">class removed</string>
    <string name="keepstrn">Keep</string>
    <string name="addButtonString">Add</string>

</resources>
